--- a/.github/workflows/sample-config-android.yml
+++ b/.github/workflows/sample-config-android.yml
@@ -8,9 +8,27 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build_mac_job:
+    runs-on: macOS-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3.13.0
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      - name: Grant execute permissions for gradlew
+        run: chmod +x ./gradlew
+        
+      - name: Build with Gradle
+        run: ./gradlew build
+
+  build_ubuntu_job:
+    runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 11
